# enterprise-finance-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
alembic/versions/: 20260722_0001_create_enterprise_finance_schema.py
demo_data/documents/acme-finance/: ambiguous_supplier_invoice.txt  aws_invoice.txt  duplicate_invoice.txt  retry_supplier_invoice.txt
docs/: architecture.md  demo-video-script.md  publish-checklist.md
examples/: approve_run_curl.sh  upload_finance_document_curl.sh
src/app/: main.py
src/app/api/: router.py
src/app/core/: config.py  exceptions.py
src/app/integrations/: category_provider.py  document_analysis_provider.py  mock_category_provider.py  mock_document_analysis_provider.py  openai_category_provider.py  openai_document_analysis_provider.py  provider_factory.py
src/app/models/: __init__.py  agent_run.py  approval_request.py  draft_pre_entry.py  finance_document.py  finance_document_version.py  llm_execution.py  supplier.py  tool_execution.py
src/app/repositories/: agent_run_repository.py  finance_repository.py  llm_execution_repository.py  supplier_repository.py
src/app/schemas/: agent.py  common.py  documents.py  health.py  suppliers.py
src/app/scripts/: seed_demo.py
src/app/services/: agent_tools_service.py  document_service.py  health_service.py  supplier_service.py  workflow_service.py
tests/: conftest.py  test_agent_runs_route.py  test_auth_and_org_routes.py  test_document_routes.py  test_health_route.py  test_schema_models.py  test_suppliers_route.py
(+3 files in other folders)
