[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t57-enterprise-finance-agent"
version = "0.1.0"
description = "Enterprise finance workflow agent with FastAPI, LangGraph, human approval, and durable state."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "openai>=1.99.0",
  "pypdf>=5.1.0",
  "streamlit>=1.47.0",
  "httpx>=0.27.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
seed-demo = "app.scripts.seed_demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
